# quant-engine-rs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.ja.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
config/: bot.toml  bot_real.toml  bot_real_recent.toml  bot_synth.toml  bot_us.toml  bot_us_long.toml  bot_us_long_tuned.toml  bot_us_relative_value.toml  bot_us_relative_value_lowturn.toml  sdk_plugins.toml
data/: a_industries.csv  a_share.csv  jp_equities.csv  jp_industries.csv  us_equities.csv  us_industries.csv
docs/: COMPARE.md  DATA.md  GITHUB_LEARNINGS.md  OPEN_SOURCE_RELEASE_CHECKLIST.md  PROMOTION.md  TUTORIALS.md  pages_index.html
quant_bot/: __init__.py  __main__.py  config.py  data.py  engine.py  execution.py  models.py  risk.py  runner.py  strategy.py
scripts/: b_cost_stress.sh  b_turnover_sweep.py  compare_example.sh  ingest_adapter.py  make_repo_public.sh  refresh_real_historical_data.py  secret_scan.sh  tutorial_readiness.sh  tutorial_research_report.sh  tutorial_us_factor_decomposition.sh  tutorial_us_factor_ic.sh  tutorial_us_long_sample.sh  tutorial_us_relative_value.sh  tutorial_us_relative_value_evidence.sh  tutorial_us_research.sh  us_factor_decay.py  us_factor_decomposition.py  us_factor_ic_diagnostics.py  us_regime_split.py  us_route_decision.py  us_route_defaults.py  us_universe_extended.csv  us_universe_template.csv
src/: attribution.rs  audit.rs  benchmark.rs  bundle.rs  calendar.rs  capital_readiness.rs  compare.rs  config.rs  control_center.rs  daemon.rs  data.rs  data_quality.rs  delisting.rs  engine.rs  execution.rs  factor_extract.rs  factor_ic.rs  fx.rs  i18n.rs  leaderboard.rs  lib.rs  lifecycle.rs  main.rs  market.rs  metrics.rs  model.rs  (+18 more)
(+11 files in other folders)
