[package]
name = "private_quant_bot"
version = "0.1.0"
edition = "2021"
description = "Personal multi-market quant bot MVP in Rust"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jdh847/private-quant-bot-rust"
keywords = ["trading", "quant", "backtest", "portfolio", "risk"]
categories = ["finance"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
